<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oab.quizz.oquizz.activity.GameEndActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/game_ended"/>
    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"></LinearLayout>
    <TextView
        android:id="@+id/txtGEScore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/score_user"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btnQuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:onClick="onClick"/>
    </LinearLayout>
</LinearLayout>
