<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.oab.quizz.oquizz.activity.WelcomeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/logonLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:text="@string/app_welcome"
            android:textSize="40sp" />
        <LinearLayout
            android:id="@+id/wFragment"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent">
            <fragment
                android:name="com.oab.quizz.oquizz.fragment.BestScoreFragment"
                android:id="@+id/frBestScore"
                android:layout_height="match_parent"
                android:layout_width="match_parent">
            </fragment>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/pseudo"
                android:layout_gravity="right"
                />
            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputUsername"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:tooltipText="@string/username"
                android:hint="@string/username"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"/>
            <RadioGroup
                android:id="@+id/rgrpGameDiff"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radioEasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easy"
                    />
                <RadioButton
                    android:id="@+id/radioMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"
                    />
                <RadioButton
                    android:id="@+id/radioHard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hard"
                    />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnScore"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:text="@string/highscores"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/btnStart"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:text="@string/start"
                android:onClick="onClick"/>
        </LinearLayout>

    </LinearLayout>
    <!--
    <LinearLayout
        android:id="@+id/pbLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/pbLoadData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:progress="0"
            android:max="100"

            />
    </LinearLayout>
    -->
    <RelativeLayout
        android:id="@+id/pbLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        >
        <ProgressBar
            android:id="@+id/pbLoadData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:progress="0"
            android:max="100"
        />
        <TextView
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/pbLoadData"
            android:layout_alignTop="@id/pbLoadData"
            android:layout_alignRight="@id/pbLoadData"
            android:layout_alignBottom="@id/pbLoadData"
            android:text="@string/loading"
            android:gravity="center"
            style="@style/OQLoading"
            />
    </RelativeLayout>
</FrameLayout>

